--- a/Resources/Images.xaml
+++ b/Resources/Images.xaml
@@ -5,12 +5,10 @@
         <DrawingImage.Drawing>
             <DrawingGroup ClipGeometry="M0,0 V252 H332 V0 H0 Z">
                 <DrawingGroup Opacity="1" Transform="1,0,0,-1,6,250">
-                    <GeometryDrawing Brush="#FFFFFFFF" Geometry="F1 M332,252z M0,0z M304,0C312.838,0,320,7.16224,320,16L320,224C320,232.838,312.838,240,304,240L16,240C7.16224,240,0,232.838,0,224L0,16C0,7.16224,7.16224,0,16,0L304,0z" />
+                    <GeometryDrawing Brush="#A5D6A7" Geometry="F1 M332,252z M0,0z M304,0C312.838,0,320,7.16224,320,16L320,224C320,232.838,312.838,240,304,240L16,240C7.16224,240,0,232.838,0,224L0,16C0,7.16224,7.16224,0,16,0L304,0z" />
                     <DrawingGroup Opacity="1">
-                        <GeometryDrawing Brush="#FF808080" Geometry="F1 M332,252z M0,0z M156,0C164.838,0,172,7.16224,172,16L172,224C172,232.838,164.838,240,156,240L16,240C7.16224,240,0,232.838,0,224L0,16C0,7.16224,7.16224,0,16,0L156,0z" />
-                        <GeometryDrawing Brush="#FF808080" Geometry="F0 M332,252z M0,0z M172,16C172,7.16224,164.838,0,156,0L16,0C7.16224,0,0,7.16224,0,16L0,224C0,232.838,7.16224,240,16,240L156,240C164.838,240,172,232.838,172,224L172,16z" />
+                        <GeometryDrawing Brush="#FF4CAF50" Geometry="F0 M332,252z M0,0z M172,16C172,7.16224,164.838,0,156,0L16,0C7.16224,0,0,7.16224,0,16L0,224C0,232.838,7.16224,240,16,240L156,240C164.838,240,172,232.838,172,224L172,16z" />
                     </DrawingGroup>
-                    <GeometryDrawing Brush="#FF808080" Geometry="F0 M332,252z M0,0z M320,0L320,240 0,240 0,0 320,0z M319,1L1,1 1,239 319,239 319,1z" />
                 </DrawingGroup>
             </DrawingGroup>
         </DrawingImage.Drawing>
@@ -19,12 +17,10 @@
         <DrawingImage.Drawing>
             <DrawingGroup ClipGeometry="M0,0 V252 H332 V0 H0 Z">
                 <DrawingGroup Opacity="1" Transform="-1,0,0,-1,326,250">
-                    <GeometryDrawing Brush="#FFFFFFFF" Geometry="F1 M332,252z M0,0z M304,0C312.838,0,320,7.16224,320,16L320,224C320,232.838,312.838,240,304,240L16,240C7.16224,240,0,232.838,0,224L0,16C0,7.16224,7.16224,0,16,0L304,0z" />
+                    <GeometryDrawing Brush="#A5D6A7" Geometry="F1 M332,252z M0,0z M304,0C312.838,0,320,7.16224,320,16L320,224C320,232.838,312.838,240,304,240L16,240C7.16224,240,0,232.838,0,224L0,16C0,7.16224,7.16224,0,16,0L304,0z" />
                     <DrawingGroup Opacity="1">
-                        <GeometryDrawing Brush="#FF808080" Geometry="F1 M332,252z M0,0z M156,0C164.838,0,172,7.16224,172,16L172,224C172,232.838,164.838,240,156,240L16,240C7.16224,240,0,232.838,0,224L0,16C0,7.16224,7.16224,0,16,0L156,0z" />
-                        <GeometryDrawing Brush="#FF808080" Geometry="F0 M332,252z M0,0z M172,16C172,7.16224,164.838,0,156,0L16,0C7.16224,0,0,7.16224,0,16L0,224C0,232.838,7.16224,240,16,240L156,240C164.838,240,172,232.838,172,224L172,16z" />
+                        <GeometryDrawing Brush="#FF4CAF50" Geometry="F0 M332,252z M0,0z M172,16C172,7.16224,164.838,0,156,0L16,0C7.16224,0,0,7.16224,0,16L0,224C0,232.838,7.16224,240,16,240L156,240C164.838,240,172,232.838,172,224L172,16z" />
                     </DrawingGroup>
-                    <GeometryDrawing Brush="#FF808080" Geometry="F0 M332,252z M0,0z M320,240L320,0 0,0 0,240 320,240z M319,1L319,239 1,239 1,1 319,1z" />
                 </DrawingGroup>
             </DrawingGroup>
         </DrawingImage.Drawing>
@@ -33,10 +29,9 @@
         <DrawingImage.Drawing>
             <DrawingGroup ClipGeometry="M0,0 V252 H332 V0 H0 Z">
                 <DrawingGroup Opacity="1" Transform="1,0,0,-1,6,250">
-                    <GeometryDrawing Brush="#FFFFFFFF" Geometry="F1 M332,252z M0,0z M304,0C312.838,0,320,7.16224,320,16L320,224C320,232.838,312.838,240,304,240L16,240C7.16224,240,0,232.838,0,224L0,16C0,7.16224,7.16224,0,16,0L304,0z" />
+                    <GeometryDrawing Brush="#A5D6A7" Geometry="F1 M332,252z M0,0z M304,0C312.838,0,320,7.16224,320,16L320,224C320,232.838,312.838,240,304,240L16,240C7.16224,240,0,232.838,0,224L0,16C0,7.16224,7.16224,0,16,0L304,0z" />
                     <DrawingGroup Opacity="1">
-                        <GeometryDrawing Brush="#FF808080" Geometry="F1 M332,252z M0,0z M304,0C312.838,0,320,7.16224,320,16L320,104C320,112.838,312.838,120,304,120L16,120C7.16224,120,0,112.838,0,104L0,16C0,7.16224,7.16224,0,16,0L304,0z" />
-                        <GeometryDrawing Brush="#FF808080" Geometry="F0 M332,252z M0,0z M320,16C320,7.16224,312.838,0,304,0L16,0C7.16224,0,0,7.16224,0,16L0,104C0,112.838,7.16224,120,16,120L304,120C312.838,120,320,112.838,320,104L320,16z" />
+                        <GeometryDrawing Brush="#FF4CAF50" Geometry="F0 M332,252z M0,0z M320,16C320,7.16224,312.838,0,304,0L16,0C7.16224,0,0,7.16224,0,16L0,104C0,112.838,7.16224,120,16,120L304,120C312.838,120,320,112.838,320,104L320,16z" />
                     </DrawingGroup>
                 </DrawingGroup>
             </DrawingGroup>
@@ -46,10 +41,9 @@
         <DrawingImage.Drawing>
             <DrawingGroup ClipGeometry="M0,0 V252 H332 V0 H0 Z">
                 <DrawingGroup Opacity="1" Transform="1,0,0,1,6,2">
-                    <GeometryDrawing Brush="#FFFFFFFF" Geometry="F1 M332,252z M0,0z M304,0C312.838,0,320,7.16224,320,16L320,224C320,232.838,312.838,240,304,240L16,240C7.16224,240,0,232.838,0,224L0,16C0,7.16224,7.16224,0,16,0L304,0z" />
+                    <GeometryDrawing Brush="#A5D6A7" Geometry="F1 M332,252z M0,0z M304,0C312.838,0,320,7.16224,320,16L320,224C320,232.838,312.838,240,304,240L16,240C7.16224,240,0,232.838,0,224L0,16C0,7.16224,7.16224,0,16,0L304,0z" />
                     <DrawingGroup Opacity="1">
-                        <GeometryDrawing Brush="#FF808080" Geometry="F1 M332,252z M0,0z M304,0C312.838,0,320,7.16224,320,16L320,104C320,112.838,312.838,120,304,120L16,120C7.16224,120,0,112.838,0,104L0,16C0,7.16224,7.16224,0,16,0L304,0z" />
-                        <GeometryDrawing Brush="#FF808080" Geometry="F0 M332,252z M0,0z M320,16C320,7.16224,312.838,0,304,0L16,0C7.16224,0,0,7.16224,0,16L0,104C0,112.838,7.16224,120,16,120L304,120C312.838,120,320,112.838,320,104L320,16z" />
+                        <GeometryDrawing Brush="#FF4CAF50" Geometry="F0 M332,252z M0,0z M320,16C320,7.16224,312.838,0,304,0L16,0C7.16224,0,0,7.16224,0,16L0,104C0,112.838,7.16224,120,16,120L304,120C312.838,120,320,112.838,320,104L320,16z" />
                     </DrawingGroup>
                 </DrawingGroup>
             </DrawingGroup>
@@ -59,8 +53,7 @@
         <DrawingImage.Drawing>
             <DrawingGroup ClipGeometry="M0,0 V241.052 H322.073 V0 H0 Z">
                 <DrawingGroup Opacity="1" Transform="-1,0,0,-1,322.073,241.052">
-                    <GeometryDrawing Brush="#FF808080" Geometry="F1 M322.073,241.052z M0,0z M306.073,0C314.91,0,322.073,7.16223,322.073,16L322.073,225.052C322.073,233.89,314.91,241.052,306.073,241.052L16.0001,241.052C7.16232,241.052,6.10352E-05,233.89,6.10352E-05,225.052L0,16.0001C0,7.16229,7.16226,6.10352E-05,16,6.10352E-05L306.073,0z" />
-                    <GeometryDrawing Brush="#FF808080" Geometry="F0 M322.073,241.052z M0,0z M322.073,16C322.073,7.16223,314.91,0,306.073,0L16,6.10352E-05C7.16226,6.10352E-05,0,7.16229,0,16.0001L6.10352E-05,225.052C6.10352E-05,233.89,7.16232,241.052,16.0001,241.052L306.073,241.052C314.91,241.052,322.073,233.89,322.073,225.052L322.073,16z" />
+                    <GeometryDrawing Brush="#FF4CAF50" Geometry="F0 M322.073,241.052z M0,0z M322.073,16C322.073,7.16223,314.91,0,306.073,0L16,6.10352E-05C7.16226,6.10352E-05,0,7.16229,0,16.0001L6.10352E-05,225.052C6.10352E-05,233.89,7.16232,241.052,16.0001,241.052L306.073,241.052C314.91,241.052,322.073,233.89,322.073,225.052L322.073,16z" />
                 </DrawingGroup>
             </DrawingGroup>
         </DrawingImage.Drawing>
