--- a/App.xaml
+++ b/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Circle_2"
-             xmlns:tb="http://www.hardcodet.net/taskbar">
+             xmlns:tb="http://www.hardcodet.net/taskbar"
+             ShutdownMode="OnExplicitShutdown">
     <Application.Resources>
         <!-- System Tray Icon -->
         <tb:TaskbarIcon x:Key="TrayIcon"
